<resources>
    <string name="app_name">Insight</string>

    <!-- Layout Stats -->
    <string name="stats_panel_time_title">ВРМ</string>
    <string name="stats_panel_am_title">ПАМ</string>
    <string name="stats_panel_hp_title">ЗДР</string>
    <string name="stats_panel_aur_title">АУР</string>
    <string name="stats_panel_dex_title">ЛОВ</string>
    <string name="stats_panel_prc_title">ТОЧ</string>


    <!-- Bottom Panel -->
    <string name="bottom_panel_empty_inventory_title">иНВЕНТАРЬ ПУСТ</string>

    <!-- Home Screen -->
    <string name="home_screen_continue_title">ПРОДОЛЖИТЬ</string>
    <string name="home_screen_new_game_title">НОВАЯ ИГРА</string>
    <string name="home_screen_settings_title">НАСТРОЙКИ</string>
    <string name="home_screen_rules_title">ПРАВИЛА</string>
    <string name="home_screen_achievements_title">ДОСТИЖЕНИЯ</string>
    <string name="home_screen_directory_title">БАЗА ДАННЫХ</string>
    <string name="home_screen_about_title">АВТОРЫ</string>

    <!-- Menu -->
    <string name="game_book_got_to_main_menu_title">В главное меню</string>

    <!-- Armory -->
    <string name="armory_take_out_title">Снять</string>
    <string name="armory_take_on_title">Надеть</string>

    <string name="armory_equipment_blaster_title">Бластер</string>
    <string name="armory_equipment_beam_title">Лучемет</string>
    <string name="armory_equipment_grenade_title">Свето-шумовая граната</string>
    <string name="armory_equipment_electroshock_title">Электрошокер</string>
    <string name="armory_equipment_targeter_title">Целеуказатель для бластера</string>
    <string name="armory_equipment_flak_jacket_title">Бронежилет</string>
    <string name="armory_equipment_power_shield_title">Энергощит</string>
    <string name="armory_equipment_aid_kit_title">Аптечка</string>
    <string name="armory_equipment_open_space_eqpt_title">Снаряжение для выхода в открытый космос</string>

    <!-- Description -->
    <string name="armory_equipment_blaster_description">Бластер достаточно скорострелен, но имеет не слишком высокую убойную мощность (–1 Ловкость).</string>
    <string name="armory_equipment_beam_description">Лучемёт более громоздкое оружие, его придется носить за спиной. Зато он стреляет целым веером лазерных лучей  (–2 Ловкости).</string>
    <string name="armory_equipment_grenade_description">Боевые гранаты использовать запрещено, но есть свето-шумовые. Разместив на поясе, уменьшите Ловкость на 1 за каждую.</string>
    <string name="armory_equipment_electroshock_description">Электрошокер подходит для не летального задержания преступников (–1 Ловкость).</string>
    <string name="armory_equipment_targeter_description">Целеуказатель для бластера (работает только с ним). Прибор, цепляющийся на шлем, ведёт интеллектуальный поиск целей с привязкой их к положению оружия (навнутреннем экране шлема появляется маркер указывающий на что сейчас нацелен бластер). Увеличивает шанс поражения цели (+3 к Меткости), снижает подвижность (–1 к Ловкости).</string>
    <string name="armory_equipment_flak_jacket_description">Бронежилет снижает повреждения как от энергетического (лучевого), так и плазменного оружия (–2 Ловкости).</string>
    <string name="armory_equipment_power_shield_description">Энергощит представляет собой браслеты, которые надеваются на запястья. В случае необходимости они активируются, создавая между собой энергетическое поле, защищающее от лучевого оружия. Так как браслеты крепятся на руки, то мешают прицельной стрельбе. Использовать энергощит можно только один раз — после чего батареи нуждаются в перезарядке (зарядить их можно просто вернувшись в оружейную комнату)энергощит (–2 Меткости).</string>
    <string name="armory_equipment_aid_kit_description">Аптечка (–1 Ловкость) — комплект для обработки ран на одно применение (восстановит 4 ЗДОРОВЬЯ). Грэм напоминает, что вы давно собирались пополнить запас аптечек, но всегда откладывали это на потом. Поэтому она у вас всего одна.</string>
    <string name="armory_equipment_open_space_eqpt_description">Снаряжение для выхода в открытый космос, представляющее собой реактивный ранец и дополнительный запас дыхательной смеси (–3 Ловкости).</string>

    <!-- User Actions -->
    <string name="game_book_find_action">Изучить</string>
    <string name="game_book_station_action">Вернуться на станцию</string>
    <string name="game_book_med_bay_action">Отправиться в лечебную капсулу</string>
    <string name="game_book_armory_action">Зайти в оружейную</string>

    <!-- Create character -->
    <string name="create_character_hp_title">Здоровье</string>
    <string name="create_character_aur_title">Аура</string>
    <string name="create_character_dex_title">Ловкость</string>
    <string name="create_character_prc_title">Меткость</string>
    <string name="create_character_change_skill_minus">-</string>
    <string name="create_character_change_skill_plus">+</string>
    <string name="create_character_change_skill_question">\?</string>

    <string name="create_character_overview_title">Медицинская справка</string>
    <string name="create_character_overview">Здесь представлены параметры, с которыми вы начинаете игру.\n\nЕщё четыре очка опыта вы можете распределить между последними двумя параметрами на своё усмотрение.</string>
    <string name="create_character_skill_info_hp">Получая ранения, снижается ваш показатель Здоровья. Если оно снизится до нуля, это будет означать гибель от ран - придётся начинать всё с начала.\n\nЗдоровье можно восстанавливать с помощью аптечек и в лечебной капсуле, но оно никогда не может превышать 22.</string>
    <string name="create_character_skill_info_aur">Аура меняется в зависимости от поступков и психологического состояния.\n\nПараметр представлен в виде чисел, где нуль – нейтральность (полное равнодушие ко всему), от плюс одного – положительные качества, от минус одного – отрицательные.\n\nВозможно, случится так, что плохие или хорошие поступки отразятся на АУРЕ и повлияют на ваше будущее.</string>
    <string name="create_character_skill_info_prc">Параметр меткости влияет на точность стрельбы и глазомер. Чем он выше, тем больше шансов попасть в цель.</string>
    <string name="create_character_skill_info_dex">Чем выше ловкость, тем вы быстрее и выносливее.\n\nНа этот параметр влияет количество снаряжения, которое вы несёте на себе.</string>
    <string name="create_character_skill_info_amn">Герой этой игры страдает амнезией, но в ходе приключений что-то будет им вспоминаться, заполняя пробелы прошлого. За каждое такое озарение вы получаете очко памяти.\n\nВозможно, благодаря этому ему удастся вспомнить что-то важное.</string>
    <string name="create_character_skill_info_time">Ячейка времени - это игровой термин, не привязанный к точному количеству минут или часов. Посещение локаций занимает время, которое у вас будет ограниченно.\n\nВсего доступно 30 клеток времени.</string>

    <string name="character_skill_hp">ЗДОРОВЬЕ</string>
    <string name="character_skill_aur">АУРА</string>
    <string name="character_skill_prc">МЕТКОСТЬ</string>
    <string name="character_skill_dex">ЛОВКОСТЬ</string>
    <string name="character_skill_amn">ПАМЯТЬ</string>
    <string name="character_skill_time">ВРЕМЯ</string>


    <string name="create_character_reset_button_title">Сбросить</string>
    <string name="create_character_continue_button_title">Продолжить</string>

    <!-- Action Confirm Dialog -->
    <string name="action_confirm_dialog_find_evidence_text">Поиск улик отнимет у вас одну единицу времени</string>
    <string name="action_confirm_dialog_station_text">Вернуться на станцию</string>
    <string name="action_confirm_dialog_med_bay_text">Отправится в лечебную капсулу</string>
    <string name="action_confirm_dialog_armory_text">Посещение оружейной комнаты отнимет у вас одну единицу времени</string>
    <string name="action_confirm_dialog_go_to_main_menu">Выйти в главное меню</string>

    <string name="test">Здоровье – название говорит само за себя. Если вы получите ранение, ваше Здоровье снизится. В каждом конкретном случае в книге будет указано, на сколько единиц вы должны его уменьшить. Если оно снизится до нуля, это будет означать гибель от ран. Придётся начинать всё с начала.\n\nВ начале игры ваше Здоровье равно 16. Его можно восстанавливать с помощью аптечек и в лечебной капсуле, но оно никогда не может превышать 22.</string>
</resources>
